# ansible-backups

./: .gitignore  .tool-versions  README.md  ansible.cfg  devkinsta.yml  inventory.ini  justfile  pyproject.toml  requirements.yml  restic.yml  run  site.yml  templates.yml
collections/ansible_collections/community.docker-4.1.0.info/: GALAXY.yml
collections/ansible_collections/devsec.hardening-10.1.0.info/: GALAXY.yml
collections/ansible_collections/devsec/hardening/: FILES.json  MANIFEST.json
galaxy_roles/fuzzymistborn.autorestic/meta/: .galaxy_install_info
galaxy_roles/geerlingguy.docker/meta/: .galaxy_install_info
galaxy_roles/geerlingguy.ntp/meta/: .galaxy_install_info
galaxy_roles/tigattack.restic_rest_server/meta/: .galaxy_install_info
group_vars/: common.yml  local.yml  production.yml
group_vars/all/: common.yml
inventories/: local.ini  production.ini  templates.ini
tasks/: common.yml  docker.yml  hardening.yml  restic_client.yml  restic_rest_server.yml  upgrade.yml
