[project]
name = "ansible"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Clint Bullock", email = "clint@seoteric.com"},
]
dependencies = [
    "ansible>=10.5.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
